<resources>
    <string name="app_name_icon">T-H200</string>
    <string name="app_name">T-H200电阻法电缆故障测距仪</string>
    <string name="app_number">T-H200</string>
    <string name="company_name">山东科汇电力自动化股份有限公司</string>
    <string name="user_name">用户名</string>
    <string name="user_name_is_empty">用户名不能为空</string>
    <string name="password_is_empty">密码不能为空</string>
    <string name="check_net_retry">请检查网络后重试!</string>
    <string name="user_password">密&#160;&#160;码</string>
    <string name="forget_password">&#160;&#160;&#160;记住密码</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="report_time">上报时间</string>
    <string name="reply_content">回复内容</string>
    <string name="other_filters">其他筛选</string>
    <string name="all">全部</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="replied">已回复</string>
    <string name="un_reply">未回复</string>
    <string name="test_name">测试者</string>
    <string name="test_time">测试时间</string>
    <string name="loading_more">拼命加载中...</string>
    <string name="no_load_more">已经到底啦!</string>
    <string name="test_name_2">测试人员</string>
    <string name="test_position">测试地点</string>
    <string name="cable_length">电缆长度</string>
    <string name="cable_type">电压等级</string>
    <string name="fault_type">故障类型</string>
    <string name="fault_length">故障长度</string>
    <string name="short_note_information">简注信息</string>
    <string name="over_voice_magnetic_field_data">查看磁场声音数据</string>
    <string name="language_selection">语言选择</string>
    <string name="language">语言</string>
    <string name="check_new_version">检查新版本</string>
    <string name="about_us">关于我们</string>
    <string name="reply">回复</string>
    <string name="reply_status">回复状态</string>
    <string name="assistance_details">协助详情</string>
    <string name="confirm_reply">确定要回复吗?</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="selection_language_is_empty">语言选择不能为空!</string>
    <string name="reply_content_is_empty">回复内容不能为空!</string>
    <string name="user_name_is_not_empty">用户名为空!</string>
    <string name="reply_success">回复成功!</string>
    <string name="settings">设置</string>
    <string name="company_name_text">公司名称</string>
    <string name="soft_name">软件名称</string>
    <string name="soft_version">软件版本</string>
    <string name="company_position">公司地址</string>
    <string name="company_position_value">山东省淄博市张店区三赢路16号山东科汇科技园</string>
    <string name="zh">简体中文</string>
    <string name="switch_language_success_notice">语言切换成功,重启App后生效是否立即重启?</string>
    <string name="checking_update">正在检测更新...</string>
    <string name="latest_version">已是最新版本!</string>
    <string name="version_update">是否立即更新版本?</string>
    <string name="download_failure">下载失败，请检查权限是否开启!</string>
    <string name="this_update">本次更新共</string>
    <string name="wait_downloading">M\n下载中,请稍等...</string>
    <string name="download_success">下载成功!</string>
    <string name="magnetic_field">磁场</string>
    <string name="magnetic_field_gain">磁场增益</string>
    <string name="shengyin">声音</string>
    <string name="shengyin_gain">声音增益</string>
    <string name="pause">暂停</string>
    <string name="memory">记忆</string>
    <string name="compare">比较</string>
    <string name="filter_mode">滤波模式</string>
    <string name="end_time_is_big">选择结束时间要大于开始时间!</string>
    <string name="start">开始</string>
    <string name="You_have_no_memory_data_can_not_compare">你还没有记忆数据，无法比较</string>
    <string name="follow_sys">跟随系统</string>
    <string name="en">English</string>
    <string name="de">Deutsch</string>
    <string name="fr">Français</string>
    <string name="es">Español</string>
    <string name="no_data">无数据</string>
    <string name="no_net">无网络</string>
    <string name="ditong">低通</string>
    <string name="daitong">带通</string>
    <string name="gaotong">高通</string>
    <string name="quantong">全通</string>
    <string name="logout">退出登录</string>
    <string name="clear">清空</string>
    <string name="Gain">增益</string>

    <string name="link_lost">T-H200已断开，请检查主机状态！</string>
    <string name="home_note">请选择测距方式！</string>
    <string name="btn_sheath">电缆护层故障测试</string>
    <string name="btn_main">电缆主绝缘故障测试</string>
    <string name="line_note">请按图片连接好测试线！</string>
    <string name="line_sheath">参考接线：\n以电缆芯线作为辅助线，选择完好护层作为假设的故障相进行测试；\n这两条线路在末端短接并接地！</string>
    <string name="line_sheath2">参考接线：\n以电缆芯线作为辅助线，测试故障相护层；\n这两条线路在末端短接！</string>
    <string name="line_main">参考接线：\n以完好相作为辅助线，选择另一个完好相作为假设的故障相进行测试；\n这两条线路在末端短接并接地！</string>
    <string name="line_main2">参考接线：\n以完好相作为辅助线，测试故障相；\n这两条线路在末端短接！</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="end">结&#12288;&#12288;束</string>
    <string name="measure_resistivity">测量电阻率</string>
    <string name="attention">注意：</string>
    <string name="txtAttention1">1.按操作要求，缓慢升高直流电压；</string>
    <string name="txtAttention2">2.测试电流以30–50mA为宜;</string>
    <string name="txtAttention3">2.电缆全长值只能输入纯数字；</string>
    <string name="txtAttention4">3.电缆护层电阻率参考值约为0.058Ω/km。</string>
    <string name="fault_location">故障距离</string>
    <string name="btn_save">保存</string>
    <string name="manual_input_resistivity">手动输入电阻率</string>
    <string name="btn_calculate_distance">计算距离</string>
    <string name="voltage">μV</string>
    <string name="current">mA</string>
    <string name="resistance">mΩ</string>
    <string name="resistivity">Ω/km</string>
    <string name="meter">m</string>
    <string name="percentage">%</string>
    <string name="test_voltage">测试电压：</string>
    <string name="test_current">测试电流：</string>
    <string name="test_resistance">测试电阻：</string>
    <string name="cable_length_l">输入电缆全长：</string>
    <string name="test_resistivity">测试电阻率：</string>
    <string name="fault_resistance">故障段电阻：</string>
    <string name="fault_location_l">故障距离：</string>
    <string name="distance_percentage">距离百分比：</string>
    <string name="exit_prompt">请再按一次退出软件！</string>
    <string name="connecting_wait">正在连接,请稍后…</string>
    <string name="find_bluetooth_device">查找蓝牙设备</string>
    <string name="does_not_find_device">本机没有找到蓝牙硬件或驱动</string>
    <string name="opening_bluetooth">打开蓝牙中</string>
    <string name="auto_open_failed">自动打开蓝牙失败，请手动打开蓝牙！</string>
    <string name="waiting_to_open">等待蓝牙打开，5秒后，尝试连接！</string>
    <string name="connection_failed_unable_to_get_Socket">连接失败,无法得到Socket！</string>
    <string name="connect">连接</string>
    <string name="success">成功!</string>
    <string name="connection_failed">连接失败！</string>
    <string name="demo_notice">已进入演示模式！</string>
    <string name="paired_device">已配对设备</string>
    <string name="no_paired_device">未配对设备</string>
    <string name="please_find_device">请查找设备!</string>
    <string name="find_device">查找设备</string>
    <string name="automatic_connection_please_wait">自动连接中，请稍等......</string>
    <string name="finding_device">查找设备中…</string>
    <string name="select_the_device_to_connect_to">选择要连接的设备</string>
    <string name="can_not_get_input_stream_via_Bluetooth_socket">不能通过蓝牙socket获得输入流,请重新打开应用进行连接</string>
    <string name="no_resistivity">无电阻率数值，确定进行下一步？\n（电阻率可通过输入电缆全长获得）</string>
    <string name="no_length">请先输入电缆全长！</string>
    <string name="exit_confirmation">确定结束本次测试？</string>
    <string name="resistivity_note">过低的测试电流会导致测距结果不准，确定进行下一步？</string>
    <string name="btn_input">保存</string>
    <string name="cancel_manual">取消手动输入</string>
    <string name="no_resistivity_manual">手动输入时电阻率不能为0！</string>
    <string name="version_code">版本号：</string>

</resources>
