<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_notice_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_32"
            android:layout_marginTop="@dimen/size_32"
            android:background="@null"
            android:layout_marginRight="@dimen/size_32"
            android:text="@string/confirm_reply"
            android:textColor="@color/gray4"
            android:textSize="@dimen/size_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_15"
            android:layout_marginTop="@dimen/size_45"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/size_88"
                android:layout_height="@dimen/size_27"
                android:layout_marginRight="@dimen/size_7"
                android:background="@drawable/bg_confirm"
                android:textSize="@dimen/size_15"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_27"
                android:layout_marginLeft="@dimen/size_7"
                android:textSize="@dimen/size_15"
                android:background="@drawable/bg_cancel"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>