<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_assist_list"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:drawableLeft="@drawable/ic_language"
            android:drawablePadding="@dimen/size_29"
            android:gravity="center_vertical"
            android:padding="@dimen/size_15"
            android:text="@string/language"
            android:textColor="@color/gray4"
            android:textSize="@dimen/size_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0.5"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_check_new_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:drawableLeft="@drawable/ic_check_new_version"
            android:drawablePadding="@dimen/size_29"
            android:gravity="center_vertical"
            android:padding="@dimen/size_15"
            android:text="@string/check_new_version"
            android:textColor="@color/gray4"
            android:textSize="@dimen/size_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0.5"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:drawableLeft="@drawable/ic_about_us"
            android:drawablePadding="@dimen/size_29"
            android:gravity="center_vertical"
            android:padding="@dimen/size_15"
            android:text="@string/about_us"
            android:textColor="@color/gray4"
            android:textSize="@dimen/size_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0.5"
            android:background="@color/gray" />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="@dimen/size_29"
            android:gravity="center_vertical"
            android:padding="@dimen/size_15"
            android:text="@string/logout"
            android:textColor="@color/gray4"
            android:textSize="@dimen/size_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0.5"
            android:background="@color/gray" />
    </LinearLayout>

</LinearLayout>
