<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_drawable"
    tools:context="com.kehui.t_h200.activity.MainActivity">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_heightPercent="15%"></LinearLayout>

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ll_container"
        android:gravity="center"
        android:paddingLeft="@dimen/size_15"
        android:paddingRight="@dimen/size_15"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_login_logo2" />

        <TextView
            android:id="@+id/tv_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="@dimen/size_15"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_30" />
    </LinearLayout>

    <!--隐藏登录用户密码-->
    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/ll_logo"
        android:layout_marginLeft="@dimen/size_47"
        android:layout_marginRight="@dimen/size_47"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_heightPercent="29%"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_border_f1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15"
                android:paddingTop="@dimen/size_10"
                android:paddingBottom="@dimen/size_10"
                android:src="@drawable/ic_login_person" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size_5"
                android:background="@null"
                android:hint="@string/user_name"
                android:padding="@dimen/size_5"
                android:textColor="@color/gray"
                android:textSize="@dimen/size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_11"
            android:background="@drawable/bg_round_border_f1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15"
                android:paddingTop="@dimen/size_10"
                android:paddingBottom="@dimen/size_10"
                android:src="@drawable/ic_login_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size_5"
                android:background="@null"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:padding="@dimen/size_5"
                android:textColor="@color/gray"
                android:textSize="@dimen/size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/pass_input"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/size_15"
                android:button="@drawable/cb_button_style"
                android:text="@string/forget_password"
                android:textColor="@color/white_f1"
                android:textSize="@dimen/size_15" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/ll_logo"
        android:orientation="vertical"
        app:layout_heightPercent="35%"></LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_42"
        android:layout_below="@id/ll_container2"
        android:layout_marginLeft="@dimen/size_120"
        android:layout_marginRight="@dimen/size_120"
        android:background="@drawable/bg_login_button"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/size_35"
        android:text="@string/company_name"
        android:textColor="@color/blue2"
        android:textSize="@dimen/sp_14" />


</android.support.percent.PercentRelativeLayout>
